# api-brasileirao

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  settings.toml
docs/: index.md
search/: search_index.json
setups/: s01_webscraping_cbf.py
