[tool.poetry]
name = "api-brasileirao"
version = "0.1.0"
description = ""
authors = ["Thales Teodoro Ampere <thales@ampereconsultoria.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.35"
SQLAlchemy-Utils = "^0.38.2"
dynaconf = "^3.1.8"
Jinja2 = "^3.1.1"
psycopg2-binary = "^2.9.3"
beautifulsoup4 = "^4.11.1"
requests = "^2.27.1"
tqdm = "^4.64.0"
mkdocs-material = "^8.2.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
